Fix title spacing when no description and in a legend

--- a/src/components/question/_question.scss
+++ b/src/components/question/_question.scss
@@ -1,21 +1,11 @@
 .question {
   @extend .u-mt-s;
 
-  &__legend {
-    @extend .u-mb-s;
-  }
-
   &__title {
     @extend .u-mb-s;
 
     em {
       background-color: $color-emphasis;
-    }
-  }
-
-  &__description {
-    p:last-child {
-      margin-bottom: 0;
     }
   }
 }
